--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
 }
 
 * {
@@ -10,4 +10,8 @@ body {
 
 a {
     cursor: pointer;
+}
+
+svg {
+    display: block;
 }
