--- a/src/home/static/home.css
+++ b/src/home/static/home.css
@@ -1,4 +1,4 @@
-body {
+.home {
     position: relative;
     width: 100vw;
     height: 100vh;
@@ -74,12 +74,12 @@ body {
 .arrow {
     position: absolute;
     left: 19.5%;
-    top: 10%;
+    top: 6%;
     height: 11.5%;
     z-index: 12;
     animation-name: arrow-show, arrow-move;
-    animation-duration: 2s, 1s;
-    animation-timing-function: ease-out, ease-out;
+    animation-duration: 2s, 3s;
+    animation-timing-function: ease-out, ease-in-out;
     animation-iteration-count: 1, infinite;
 }
 
@@ -95,12 +95,15 @@ body {
 @keyframes arrow-move {
     0% {
         transform: translateY(0);
+        opacity: 0.8;
     }
     40% {
         transform: translateY(40px);
+        opacity: 1;
     }
     100% {
         transform: translateY(0);
+        opacity: 0.8;
     }
 }
 
