--- a/src/common/menu/static/menu.css
+++ b/src/common/menu/static/menu.css
@@ -1,168 +1,169 @@
 .menu-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .menu-mask {
-    z-index: 100;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #0a0a0f;
-    opacity: 0.8;
+  z-index: 100;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #0a0a0f;
+  opacity: 0.8;
 }
 
 .menu-button {
-    display: none;
-    position: absolute;
-    width: 5.14%;
+  display: none;
+  position: absolute;
+  width: 5.14%;
 }
 
 .menu-button:hover {
-    animation-name: menu-button-hover;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
+  animation-name: menu-button-hover;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
 }
 
 @keyframes menu-button-hover {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(-360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
 }
 
 .menu-button.isOpening,
 .menu-button.isClosing {
-    transform: scale(0);
-    animation-name: menu-button-active;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-out;
+  transform: scale(0);
+  animation-name: menu-button-active;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
 }
 
 @keyframes menu-button-active {
-    0% {
-        transform: scale(1);
-    }
-    100% {
-        transform: scale(0);
-    }
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
 
 .open-menu-button {
-    z-index: 90;
-    top: 4.37%;
-    right: 3%;
+  z-index: 90;
+  top: 4.37%;
+  right: 3%;
 }
 
 .close-menu-button {
-    height: 9.25%;
-    z-index: 102;
-    top: 4.37%;
-    right: 22.8%;
+  height: 9.25%;
+  z-index: 102;
+  top: 4.37%;
+  right: 22.8%;
 }
 
 .menu-button.show {
-    display: block;
+  display: block;
 }
 
 .menu {
-    visibility: hidden;
-    position: absolute;
-    z-index: 101;
-    width: 19.12%;
-    height: 100%;
-    background-color: #FCFAEE;
-    opacity: 1;
-    top: 0;
-    right: -19.12%;
+  visibility: hidden;
+  position: absolute;
+  z-index: 101;
+  width: 19.12%;
+  height: 100%;
+  background-color: #fcfaee;
+  opacity: 1;
+  top: 0;
+  right: -19.12%;
 }
 
 .menu.show {
-    visibility: visible;
-    right: 0;
-    animation-name: menu-show;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
+  visibility: visible;
+  right: 0;
+  animation-name: menu-show;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
 }
 
 .menu.isClosing {
-    animation-name: menu-hide;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-out;
+  animation-name: menu-hide;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-out;
 }
 
 @keyframes menu-show {
-    0% {
-        visibility: visible;
-        right: -19.12%;
-    }
-    100% {
-        visibility: visible;
-        right: 0;
-    }
+  0% {
+    visibility: visible;
+    right: -19.12%;
+  }
+  100% {
+    visibility: visible;
+    right: 0;
+  }
 }
 
 @keyframes menu-hide {
-    0% {
-        visibility: visible;
-        right: 0%;
-    }
-    100% {
-        visibility: visible;
-        right: -19.12%;
-    }
+  0% {
+    visibility: visible;
+    right: 0%;
+  }
+  100% {
+    visibility: visible;
+    right: -19.12%;
+  }
 }
 
 .menu-top {
-    position: absolute;
-    top: 4.37%;
-    display: flex;
-    justify-content: space-around;
-    padding: 0% 10%;
-    height: 9.25%;
+  position: absolute;
+  top: 4.37%;
+  display: flex;
+  justify-content: space-around;
+  padding: 0% 10%;
+  height: 9.25%;
 }
 
 .contact-button,
 .home-button {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .menu-body {
-    width: 100%;
-    position: absolute;
-    top: 24.94%;
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    flex-direction: column;
+  width: 100%;
+  position: absolute;
+  top: 24.94%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  flex-direction: column;
 }
 
 .menu-body-item {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    margin-bottom: 8.15%;
-    font-size: 1.4rem;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  margin-bottom: 8.15%;
+  font-size: 1.4rem;
 }
 
 .menu-body-item.menu-body-item-help a {
-    color: #F17752;
+  color: #f17752;
 }
 
 .menu-body-item a {
-    display: flex;
-    align-items: baseline;
-    text-decoration: none;
-    color: #5D87C0;
+  display: flex;
+  align-items: baseline;
+  text-decoration: none;
+  color: #5d87c0;
 }
 
 .menu-body-item-number {
-    margin-right: 0.4rem;
-    font-size: 2rem;
+  margin-right: 0.4rem;
+  font-size: 2rem;
 }
