--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Noto Sans TC', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 16px;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
-    cursor: pointer;
-    text-decoration: none;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 svg {
-    display: block;
+  display: block;
 }
