修改菜單動畫結束時定格

--- a/src/common/menu/static/menu.css
+++ b/src/common/menu/static/menu.css
@@ -88,12 +88,14 @@
   animation-name: menu-show;
   animation-duration: 1s;
   animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
 }
 
 .menu.isClosing {
   animation-name: menu-hide;
   animation-duration: 0.5s;
   animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
 }
 
 @keyframes menu-show {
