--- a/src/leadingStoryDialog/static/leadingStoryDialog.css
+++ b/src/leadingStoryDialog/static/leadingStoryDialog.css
@@ -5,6 +5,8 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  min-width: 1440px;
+  min-height: 688px;
 }
 
 .leading-story-dialog-mask {
