--- a/src/originalPaintingDialog/static/originalPaintingDialog.css
+++ b/src/originalPaintingDialog/static/originalPaintingDialog.css
@@ -6,6 +6,8 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  min-width: 1440px;
+  min-height: 688px;
 }
 
 .original-painting-dialog-wrapper.isShow {
