--- a/src/storyB/static/storyB.css
+++ b/src/storyB/static/storyB.css
@@ -5,6 +5,8 @@
   background: url("./storyB_background.png") no-repeat center;
   background-size: cover;
   overflow: hidden;
+  min-width: 1440px;
+  min-height: 688px;
 }
 
 .storyB .sound {
