--- a/src/storyE/static/storyE.css
+++ b/src/storyE/static/storyE.css
@@ -5,6 +5,8 @@
   background: url("./storyE_background.png") no-repeat center;
   background-size: cover;
   overflow: hidden;
+  min-width: 1440px;
+  min-height: 688px;
 }
 
 .storyE .sound {
