--- a/src/home/static/home.css
+++ b/src/home/static/home.css
@@ -2,10 +2,17 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  background: url("./home_background.png") no-repeat center;
-  background-size: cover;
   min-width: 1440px;
   min-height: 688px;
+  overflow: hidden;
+}
+
+.home-background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 120%;
 }
 
 .home .sound {
@@ -14,61 +21,19 @@
   right: 4%;
 }
 
-.logo-background {
+.slogan {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
-}
-
-.logo {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 9.5%;
-  animation-name: logo-show;
-  animation-delay: 1s;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
-
-@keyframes logo-show {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.slogan {
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 3.1%;
-  animation-name: slogan-show;
-  animation-delay: 1.2s;
-  animation-duration: 1s;
-  animation-timing-function: ease-out;
-}
-
-@keyframes slogan-show {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+  width: 100%;
 }
 
 .mountains {
   position: absolute;
-  left: 0%;
+  left: -10%;
   bottom: 0;
-  width: 100%;
+  width: 120%;
   z-index: 10;
   pointer-events: none;
 }
