--- a/src/adventureStory/static/adventureStory.css
+++ b/src/adventureStory/static/adventureStory.css
@@ -56,7 +56,6 @@
 .move-left-button,
 .move-right-button {
   position: absolute;
-  /* top: 42.43%; */
   top: 50%;
   transform: translateY(-50%);
   width: 2.91%;
@@ -77,7 +76,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
-  height: 450px;
+  height: 75%;
   overflow: hidden;
 }
 
@@ -92,30 +91,31 @@
   z-index: 10;
 }
 
-.adventureStory-img-wrapper::before {
-  left: 0;
-  background: linear-gradient(
-    90deg,
-    rgb(255, 255, 255) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
-}
-
-.adventureStory-img-wrapper::after {
-  right: 0;
-  background: linear-gradient(
-    270deg,
-    rgb(255, 255, 255) 0%,
-    rgba(255, 255, 255, 0) 100%
-  );
-}
-
 .adventureStory-img {
-  width: 3000px;
-  height: 450px;
+  width: 4386px;
+  height: 812px;
   user-select: none;
   position: absolute;
   top: 0;
+}
+
+.adventureStory-img-item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.adventureStory-background {
+  z-index: 2;
+}
+
+.adventureStory-json {
+  z-index: 3;
+}
+
+.adventureStory-text {
+  z-index: 4;
 }
 
 .eason-think {
@@ -193,6 +193,8 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  min-width: 1440px;
+  min-height: 688px;
 }
 
 .questionB-mask {
