修改冒險故事背景顏色

--- a/src/adventureStory/static/adventureStory.css
+++ b/src/adventureStory/static/adventureStory.css
@@ -7,7 +7,7 @@
   min-width: 1440px;
   min-height: 688px;
   overflow: hidden;
-  background-color: #fbf7e9;
+  background-color: #584b3d;
   z-index: 100;
 }
 
